--- a/views/about.html
+++ b/views/about.html
@@ -100,7 +100,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/clancy.png">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/tim.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
@@ -114,7 +114,25 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/liam.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/liam.png">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">Liam</h2>
+                        <p class="text-third">blank</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/matt.png">
+                      <div class="flex-grow">
+                        <h2 class="text-primary title-font font-medium">Matt</h2>
+                        <p class="text-third">blank</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/img1.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
@@ -123,27 +141,9 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/matt.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/dawson.png">
                       <div class="flex-grow">
-                        <h2 class="text-primary title-font font-medium">John Doe</h2>
-                        <p class="text-third">blank</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/img1.jpg">
-                      <div class="flex-grow">
-                        <h2 class="text-primary title-font font-medium">john doe</h2>
-                        <p class="text-third">blank</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                    <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/assets/figma-imgs/tim.jpeg">
-                      <div class="flex-grow">
-                        <h2 class="text-primary title-font font-medium">john doe</h2>
+                        <h2 class="text-primary title-font font-medium">Dawson</h2>
                         <p class="text-third">blank</p>
                       </div>
                     </div>
