--- a/views/index.html
+++ b/views/index.html
@@ -38,8 +38,8 @@
       <!--==================
        HERO SECTION
       ==================-->
-
-          <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
+<!--
+          <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div>
           <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
               <source src="../public/assets/video/background2.mp4" type="video/mp4">
           </video>
@@ -71,36 +71,19 @@
                      A New Way to Train in VR
                  </h2>
                  <hr class="mt-4">
-                 <p class="text-primary text-left mt-6 tracking-widest leading-8">
+                 <p class="text-primary text-left mt-6 tracking-widest leading-10">
                     Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
                 </p>
                 <a href="#">
-                  <p class="text-center">LEARN MORE ABOUT CODEX</p>
+                  <p class="tracking-widest mt-20 text-center">LEARN MORE ABOUT CODEX</p> <!-- may need to change the tracking widest -->
                 </a>
              </div>
              <div class="w-2/5 p-12">
-                 <img class="object-cover h-full" src="../public/assets/figma-imgs/vitruve.jpg" alt="">
+                 <img class="object-cover h-screen" src="../public/assets/figma-imgs/vitruve.jpg" alt="">
              </div>
            </section>
       </section>
-      <!-- <section class="panel">
-          <section class="w-full h-screen sm:mx-4 lg:mx-20 xl:mx-64 md: lg:my-64 sm:block md:flex">
-            <section class="introTextBlock lg:w-3/5">
-              <h1 class="text-3xl font-sans font-black border-b p-4 sm:text-center sm:w-11/12 lg:w-full lg:text-left">Codex: A New Way to Train in VR</h1>
 
-              <p class="big w-1/2 text-xl text-gray-300 p-2 sm:text-center sm:w-11/12 sm:mb-12 lg:w-full lg:text-left lg:mb-32"> Effective training requires expensive equipment, generates potential safety hazards, and elongates training time. With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
-              </p>
-
-              <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l sm:ml-2 lg:text-xl lg:-ml-0 sm:block" style="width: 67%;" href="./products.html">
-                <p class="text-center">LEARN MORE ABOUT CODEX</p>
-              </a>
-            </section>
-
-            <aside class="vr-img w-2/6 sm:w-4/6 sm:mx-8 sm:my-8 md:float-left md:mr-20 lg:-mt-8">
-        			<img src="../public/assets/figma-imgs/vr-goggles.png" alt="vr goggles" class="vr-goggles">
-            </aside>
-          </section>
-      </section> -->
 
       <section class="panel">
         <!--==================
@@ -147,42 +130,6 @@
               </div>
             </div>
           </section>
-
-
-
-
-          <!-- <div id='car-container'>
-            <input type='radio' name="image" id='inp1' checked>
-            <input type='radio' name="image" id='inp2' >
-            <input type='radio' name="image" id='inp3'>
-
-            <div class='images' id='one'>
-              <img src='https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=847&q=8'>
-
-              <label for='inp3' class='prev'></label>
-              <label for='inp2' class='next'></label>
-            </div>
-
-            <div class='images' id='two'>
-              <img src='https://images.unsplash.com/photo-1530825894095-9c184b068fcb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80'>
-
-              <label for='inp1' class='prev'></label>
-              <label for='inp3' class='next'></label>
-            </div>
-
-            <div class='images' id='three'>
-              <img src='https://images.unsplash.com/photo-1554474054-1258273559a0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80'>
-
-              <label for='inp2' class='prev'></label>
-              <label for='inp1' class='next'></label>
-            </div>
-
-            <div id='car-nav'>
-              <label class='dots' id='dot1' for='inp1'></label>
-              <label class='dots' id='dot2' for='inp2'></label>
-              <label class='dots' id='dot3' for='inp3'></label>
-            </div>
-          </div> -->
         </section>
       </section>
 
@@ -192,32 +139,6 @@
         ==================-->
 
         <section class="partnersBlock h-screen w-full mb-64">
-          <!-- <section class="card-container w-full sm:block sm:w-full md:flex md:justify-center">
-            <section class="wind card bg-secondary border rounded text-center overflow-hidden w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
-              <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Wind Turbines</h1>
-              <a class="text-lg" href="#">click here</a>
-            </section>
-            <section class="aircraft card text-center shadow-md h-auto py-16 p-6 rounded overflow-hidden mx-8 w-4/12 sm:w-2/5 sm:my-12" style="background-color: #6C6C6C; filter: drop-shadow(0 0 0.75rem #827D7D);">
-              <img class="m-auto p-8" src="../public/assets/figma-imgs/jet.png" alt="">
-              <h1 class="font-sans font-bold text-4xl">Air Craft Maintenance</h1>
-              <a href="#">Explore how our partners are using this  >  </a>
-            </section>
-            <section class="soldier card items-center bg-secondary border rounded overflow-hidden text-center w-3/12 h-auto p-20 text-gray-400 sm:w-1/5 sm:mx-8 sm:my-12">
-              <h1 class="sm:mt-10 md:mt-20 text-xl text-center mb-12">Soldier Training</h1>
-              <a href="#">click here</a>
-            </section>
-          </section>
-
-          <nav class="carousel text-center items-center">
-            <input class="carousel-item-1 mx-10 bg-pink-900" type="radio" name="carousel-dots">
-
-            <input class="carousel-item-2 mx-10" type="radio" name="carousel-dots" checked>
-
-            <input class="carousel-item-3 mx-10" type="radio" name="carousel-dots">
-          </nav> -->
-
-
-
           <section class="text-gray-700 body-font bg-secondary">
             <div class="container px-5 mx-auto">
               <div class="md:flex flex-wrap -m-4 lg:mt-64">
@@ -268,95 +189,76 @@
         </section>
       </section>
 
-      <section class="panel">
-        <!--==================
-         FOOTER/CONTACT SECTION
-        ==================-->
-
-        <section class="panel footer-text h-screen w-full pb-64">
-          <section class="contents contact mt-48 p-8">
-            <h1 class="text-4xl font-black mb-20">Want to Learn More About VR Training?</h1>
-            <a href=./blogs.html"">
-              <span class="my-64 border p-2 bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Head over to Our Blogs to Learn more ></span>
-            </a>
-            <br>
-            <br>
-            <a href="./contact.html">
-              <span class="my-64 p-2 border bg-secondary text-primary text-2xl hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-l lg:text-xl">Or Reach Out to Us ></span>
-            </a>
-          </section>
-          <footer class="footer">
-            <ul class="p-6">
-              <a href="./about.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
-              </a>
-              <a href="./products.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
-              </a>
-              <a href="./partners.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
-              </a>
-              <a href="./blog.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
-              </a>
-              <a href="./careers.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
-              </a>
-              <a href="./contact.html">
-                <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
-              </a>
-            </ul>
-            </footer>
-            <section class="footer-logos float-right -my-48 p-12">
-              <div class="small-logos flex justify-end">
-                <img class="mx-12" src="../public/assets/figma-imgs/twitter.png" alt="">
-                <img src="../public/assets/figma-imgs/linkedin.png" alt="">
-              </div>
-              <img src="../public/assets/figma-imgs/vinci-logo.png" alt="">
-            </section>
-        </section>
+      <section class="bg-secondary panel">
+         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+           <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+           <div class="flex flex-col justify-center mt-24">
+           <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+           <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+           <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+           </div>
+           <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+             <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+               <img class="-mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+             </div>
+             <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+               <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                 <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                 <nav class="list-none mb-10 -mt-24">
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">ABOUT</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">SOLUTIONS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">PARTNERS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CAREERS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">BLOGS</a>
+                   </li>
+                   <li>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CONTACT</a>
+                   </li>
+                 </nav>
+               </div>
+             </div>
+           </div>
+           <div class="bg-gray-200">
+             <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+               <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
+                 <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+               </p>
+               <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                 <a class="text-gray-500">
+                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                     <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                   </svg>
+                 </a>
+                 <a class="ml-3 text-gray-500">
+                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                     <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                   </svg>
+                 </a>
+                 <a class="ml-3 text-gray-500">
+                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                     <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                     <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                   </svg>
+                 </a>
+               </span>
+             </div>
+           </div>
+         </footer>
       </section>
-
-      <!-- end of main section container -->
     </section>
 
     <!-- SCRIPTS -->
 
-    <script type="text/javascript">
-      let card = document.querySelector("#card");
-
-      // console.log(card);
-      //
-      // for(let i=0; i<card.length; i++) {
-      //   if(card[i].active = true) {
-      //     alert("yes");
-      //   }else{
-      //     alert("no bueno");
-      //   }
-      // }
-
-      card.addEventListener("click", countCheck);
-
-      function countCheck() {
-        alert("dog");
-        let count = 0;
-
-        for(let i=0; i<card.length; i++) {
-          count++
-          console.log(count);
-
-          if(count % 2 != 0) {
-            card.style.backgroundColor = "#6C6C6C";
-            card.style.filter = "drop-shadow(0 0 0.75rem #827D7D)";
-          }else if(count % 2 == 0) {
-            card.style.backgroundColor = "#6C6C6C";
-            card.style.filter = "none";
-          }
-        }
-      }
-    </script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
     <script src ="../src/js/about.js"></script>
   </body>
