--- a/public/css/panels.css
+++ b/public/css/panels.css
@@ -18,3 +18,15 @@
 .hamburger-item {
   display: hidden;
 }
+
+#whyCodex{
+  margin-left: 80px;
+}
+
+#clickHereLeft{
+  margin-left: 125px;
+}
+
+#clickHereRight{
+  margin-left: 130px;
+}
