--- a/views/about.hbs
+++ b/views/about.hbs
@@ -25,7 +25,7 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-6xl md:text-5xl xlg:text-6xl">ABOUT</h1>
+          <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl">ABOUT</h1>
           <hr class="coverHr w-1/4 center mx-auto">
           <div class="tracking-widest text-center pt-1">
             <p>Learn more about VINCI's</p>
@@ -51,7 +51,7 @@
                    </p>
               </div>
               <div class="w-2/5 p-12">
-                  <img class="object-cover h-full" src="../public/img/vitruve.jpg" alt="">
+                  <img id="vitruve" class="object-cover h-full mt-6" src="../public/img/vitruve.jpg" alt="">
               </div>
             </section>
       </section>
@@ -70,7 +70,7 @@
           </p>
         </div>
         <div class="w-2/5 p-12 ">
-          <img class="object-cover lg:h-full" src="../public/img/leo.png" alt="picture of davinci">
+          <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci">
         </div>
       </section>
 
@@ -99,7 +99,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/clancy.png">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
@@ -113,7 +113,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
@@ -122,7 +122,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">John Doe</h2>
                         <p class="text-third">blank</p>
@@ -131,7 +131,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.jpg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
@@ -140,7 +140,7 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.jpeg">
+                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/dawson.png">
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">john doe</h2>
                         <p class="text-third">blank</p>
