--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -39,7 +39,7 @@
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/aircraft.png">
+                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/chopper.png">
                  </div>
                  <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
