--- a/views/about.hbs
+++ b/views/about.hbs
@@ -153,7 +153,7 @@
         </section>
 
         <section class="bg-secondary panel">
-           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
@@ -190,7 +190,7 @@
                  </div>
                </div>
              </div>
-             <div class="bg-gray-200">
+             <!-- <div class="bg-gray-200">
                <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
                  <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
                    <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
@@ -214,7 +214,7 @@
                    </a>
                  </span>
                </div>
-             </div>
+             </div> -->
            </footer>
         </section>
 
