--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -38,12 +38,14 @@
         <!--===================
          HERO SECTION CONTENTS
         =====================-->
-        <section class="contents mt-24 w-full p-4 absolute">
+        <!-- <section class="contents mt-24 w-full p-4 absolute">
+       -->
+       <section class="hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40">
             <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
-            <hr class="mt-20 p-2">
+            <hr class="mt-4 w-1/3 mx-auto p-2">
             <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-6xl md:text-5xl xlg:text-6xl">Careers
             </h1>
-            <hr class="mt-20 p-4">
+            <hr class="mt-20 w-1/3 mx-auto">
             <p class="text-center text-lg font-bold z-10">Join the VINCI team</p>
              <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
             <!-- <img src="" alt=""> -->
@@ -54,9 +56,12 @@
        CAREERS INFO SECTION
       ==================-->
       <section class="panel bg-secondary h-full">
-        <section class="contents bg-secondary text-2xl sm:p-12 sm:mt-32 lg:mt-64 overflow-auto">
-            <h1 class="text-4xl font-bold p-4">Join Our Team</h1>
-            <hr class="w-3/4" style="border-color:#7C7C7C;">
+        <section class="bg-secondary text-2xl sm:p-12 sm:mt-32 lg:mt-52 overflow-auto">
+            <h1 class="text-4xl font-bold p-4">Join Our Team
+              <hr class="mt-4 w-1/6 py-2 mb-20">
+            </h1>
+
+            <!-- <hr class="w-3/4" style="border-color:#7C7C7C;"> -->
             <section class="bg-secondary grid grid-cols-3 border">
               <h3 class="w-1/3 col-span-1">Position</h3>
               <h3 class="w-1/3 col-span-1">Type</h3>
