--- a/views/services.hbs
+++ b/views/services.hbs
@@ -40,11 +40,11 @@
           <hr class="-mt-4">
 
 
-          <section class="w-full p-4 absolute z-1 sm:mt-32 md:-my-84">
+          <section class="w-full p-4 absolute z-1 sm:mt-32 md:-my-84 lg:mt-64">
             <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-6xl md:text-5xl xlg:text-6xl" style="z-index:100;">
-              <hr class="mt-4">
+              <hr class="mt-4 w-1/3 mx-auto">
               Codex
-              <hr class="mt-4">
+              <hr class="mt-4 w-1/3 mx-auto">
             </h1>
             <p class="text-center text-lg font-bold sm:mx-12 sm:my-32" style="z-index:100;">Access the entire codex suite or pick and choose which toolkits to use</p>
 
