--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -20,5 +20,33 @@ body{
   will-change: transform;
 }
 .background{
-background-color: #191919;
+  background-color: #191919;
+}
+
+.first{
+  background: -webkit-linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
+  background: -o-linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
+  background: -moz-linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
+  background: linear-gradient(110deg, #191919 60%, #5e5c5c 60%);
+}
+
+.second{
+  background: -webkit-linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
+  background: -o-linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
+  background: -moz-linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
+  background: linear-gradient(70deg, #191919 40%, #5e5c5c 40%);
+}
+
+.third{
+  background: -webkit-linear-gradient(110deg, #191919 33%, rgba(0, 0, 0, 0) 33%), -webkit-linear-gradient(110deg, #5e5c5c 66%, #191919 66%);
+  background: -o-linear-gradient(110deg, #191919 33%, rgba(0, 0, 0, 0) 33%), -o-linear-gradient(110deg, #5e5c5c 66%, #191919 66%);
+  background: -moz-linear-gradient(110deg, #191919 33%, rgba(0, 0, 0, 0) 33%), -moz-linear-gradient(110deg, #5e5c5c 66%, #191919 66%);
+  background: linear-gradient(110deg, #191919 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, #5e5c5c 66%, #191919 66%);
+}
+
+.fourth{
+    background: -webkit-linear-gradient(70deg, #191919  30%, rgba(0,0,0,0) 30%), -webkit-linear-gradient(30deg, #5e5c5c 60%, #191919 60%);
+    background: -o-linear-gradient(70deg, #191919  30%, rgba(0,0,0,0) 30%), -o-linear-gradient(30deg, #5e5c5c 60%, #191919 60%);
+    background: -moz-linear-gradient(70deg, #191919  30%, rgba(0,0,0,0) 30%), -moz-linear-gradient(30deg, #5e5c5c 60%, #191919 60%);
+    background: linear-gradient(70deg, #191919  30%, rgba(0,0,0,0) 30%), linear-gradient(30deg, #5e5c5c 60%, #191919 60%);
 }
