--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -8,7 +8,7 @@
   </head>
   <body class="font-serif">
     <section id = "container">
-        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/assets/figma-imgs/contact-hero-img.png')">
+        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0">
@@ -32,7 +32,7 @@
             <p>Book a demo.</p>
           </div>
          </section>
-         <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contactbckgrnd.png'">
+         <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
              <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
              <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
