--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -8,7 +8,7 @@
   </head>
   <body class="font-serif">
     <section id = "container" class="background">
-      <section id="cover" class="bg-bottom bg-cover bg-opacity-75 text-primary panel background cover overflow-hidden" style="background-image: url('../public/assets/figma-imgs/partners-hero-img.png')">
+      <section id="cover" class="bg-bottom bg-cover bg-opacity-75 text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/partners-hero-img.png')">
         <header class="text-gray-700 body-font ">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
               <a href="/" class="flex items-center mb-4 md:mb-0">
@@ -35,17 +35,17 @@
        <!-- - - - - - - - - Airforce ---------------->
        <section class="mb-4 panel background first">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10">Air Craft Maintenance</h1>
+            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/chopper.png">
+                   <img class="object-cover object-center rounded p-4" alt="hero" src="../public/img/chopper.png">
                  </div>
-                 <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-                   <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
+                 <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
+                   <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client</span>
                      <span class="hidden lg:inline-block ml-48">Platform </span>
                    </h1>
-                   <p class="mb-8 leading-relaxed">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
+                   <p class="mb-8 leading-relaxed text-primary">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
                      <br><br>
                     VINCI was awarded a contract by the Air Force to develop VR environments and modify CODEX for various USAF aircraft. </p>
                    <div class="flex justify-center">
@@ -59,19 +59,19 @@
        </section>
 
        <!-- - - - - - - - - WIND TURBINES ---------------->
-       <section class="mb-4 panel background first">
+       <section class="mb-4 panel background second">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10">Wind Turbines</h1>
+            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Wind Turbines</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/wind.png">
+                   <img class="object-cover object-center rounded p-4" alt="hero" src="../public/img/windturbine.jpg">
                  </div>
-                 <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                 <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
                      <span class="hidden lg:inline-block ml-48">Platform </span>
                    </h1>
-                   <p class="mb-8 leading-relaxed">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
+                   <p class="mb-8 leading-relaxed text-primary">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                    <div class="flex justify-center">
                      <button class="inline-flex text-white border-solid border-2 py-2  px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about SGRE</button>
                    </div>
@@ -82,23 +82,23 @@
        </section>
 
        <!-- - - - - - - - - Soldier Training ---------------->
-        <section class="mb-4 panel background first">
+        <section class="mb-4 panel background third">
           <section class="text-primary body-font">
-            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10">Soldier Training</h1>
+            <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/classroom.png">
+                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/spotlight.png">
                  </div>
-                 <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                 <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
                      <span class="hidden lg:inline-block ml-48">Platform </span>
                    </h1>
-                   <p class="mb-8 leading-relaxed">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
+                   <p class="mb-8 leading-relaxed text-primary">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
                     <br><br>
                    Please contact us directly for more information.</p>
                    <div class="flex justify-center">
-                     <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Learn about Natick Solider Research</button>
+                     <button class="inline-flex text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg mt-2">Learn about Natick Solider Research</button>
                    </div>
                  </div>
                </div>
@@ -108,19 +108,19 @@
 
 
       <!-- - - - - - - - - SafetyDNA VR ---------------->
-        <section class="mb-4 panel background first">
+        <section class="mb-4 panel background fourth">
           <section class="text-primary body-font">
             <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10">SafetyDNA VR</h1>
             <section class="text-gray-700 body-font">
                <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
                  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
-                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/aircraft.png">
+                   <img class="object-cover object-center rounded" alt="hero" src="../public/img/car.png">
                  </div>
-                 <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+                 <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                    <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
                      <span class="hidden lg:inline-block ml-48">Platform </span>
                    </h1>
-                   <p class="mb-8 leading-relaxed">
+                   <p class="mb-8 leading-relaxed text-primary">
                      Teaching personal safety in the automobile manufacturing industry is a difficult task, but it is a deparately needed one. Every year, thousands of Americans are injured on manufacturing floors due to largely preventable causes.
                      <br> <br>
                      Working with Select Int., VINCI helped prototype a VR version of their SAFETYDNA workplace safety training; workers can now get the experience of being injured due to unsafe actions in VR without the actual physical consequences. By doing this, the principles of SafetyDNA can be deeply embedded into workers’ minds, making them remember safety traits better on real-world lines.
