--- a/views/services.hbs
+++ b/views/services.hbs
@@ -18,10 +18,6 @@
            NAV SECTION
           ==================-->
 
-          <!--==================
-           NAV SECTION
-          ==================-->
-
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0">
@@ -55,10 +51,10 @@
         </section>
       </section>
       <section class="panel bg-secondary">
-        <section class="contents text-lg p-12 bg-secondary lg:py-40">
-          <h1 class="text-4xl text-center py-4">Educate Your Workforce Like Never Before</h1>
+        <section class="text-lg p-12 bg-secondary lg:py-40">
+          <h1 class="text-4xl text-center py-4 p-4">Educate Your Workforce Like Never Before</h1>
           <hr class="m-auto w-3/4 py-4 font-thin">
-          <section class="md:ml-12">
+          <section class="md:ml-12 lg:text-2xl">
             <p>
               Instructors face limited time, high costs, and potential hazards during high consequence training. These limitations create a gap between the amount of time/repetitions needed for effective knowledge retention and the available opportunities to train.
             </p>
@@ -74,8 +70,8 @@
         </section>
       </section>
       <section class="panel bg-secondary">
-        <section class="authoring lg:flex m-auto p-12 lg:py-40">
-          <section class="contents">
+        <section class="authoring lg:flex p-12 lg:py-40">
+          <section class="">
             <h1 class="text-3xl font-black uppercase">Codex Authoring</h1>
             <h4 class="text-xl font-bold sm:my-12">Fully Customize Your Simulations</h4>
             <ul>
@@ -95,7 +91,7 @@
       </section>
       <section class="panel bg-secondary">
         <section class="simulator lg:flex m-auto p-12 lg:py-40">
-          <section class="contents">
+          <section class="">
             <h1 class="text-3xl font-black uppercase">Codex Simulator</h1>
             <h4 class="text-xl font-bold sm:my-12">Highly Realistic, Interactive VR</h4>
             <ul>
@@ -115,7 +111,7 @@
       </section>
       <section class="panel bg-secondary">
         <section class="analytics lg:flex m-auto p-12 lg:py-40">
-          <section class="contents">
+          <section class="">
             <h1 class="text-3xl font-black uppercase">Codex Analytics</h1>
             <h4 class="text-xl font-bold sm:my-12">Robust Data Analytics</h4>
             <ul>
@@ -135,7 +131,7 @@
       </section>
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:px-12 lg:flex lg:py-48">
-          <section class="contents">
+          <section class="">
             <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
             <h2 class="text-2xl font-bold sm:my-8">Leverage low-cost VR
               <hr class="w-3/4 py-4 font-thin">
@@ -157,7 +153,7 @@
       </section>
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:flex lg:py-48">
-          <section class="contents">
+          <section class="">
             <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
             <h2 class="text-2xl font-bold sm:my-8">Personalized and Relevant Content
               <hr class="w-3/4 py-4 font-thin">
@@ -176,7 +172,7 @@
       </section>
       <section class="panel bg-secondary">
         <section class="leverage m-auto p-12 lg:flex lg:py-48">
-          <section class="contents">
+          <section class="">
             <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
             <h2 class="text-2xl font-bold sm:my-8">Scalable Collaboration
               <hr class="w-3/4 py-4 font-thin">
@@ -206,7 +202,6 @@
   ​
                  <textarea class="border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
                  <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
-                 <p class="text-xs text-gray-500 mt-3">////////////////////////////////////////////////////////////////////</p>
                </div>
   ​
                <div class="lg:w-1/3 md:w-1/2 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32 object-cover"
