fixing merge issues

--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -56,7 +56,7 @@
        CAREERS INFO SECTION
       ==================-->
       <section class="panel bg-secondary h-full">
-        <section class="bg-secondary text-2xl sm:p-12 sm:mt-32 lg:mt-52 overflow-auto">
+        <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
             <h1 class="text-4xl font-bold p-4">Join Our Team
               <hr class="mt-4 w-1/6 py-2 mb-20">
             </h1>
