Finalize card carousel behaviour/style

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,19 @@
-footer ul a li {
+/* footer ul a li {
   width: 10%;
 }
+
+
+body {
+  background-color: black;
+  color: white;
+} */
+
+/* .container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12rem;
+  display: flex;
+  width: 100%;
+  border: 1px solid red;
+  height: 200px;
+} */
