--- a/public/css/panels.css
+++ b/public/css/panels.css
@@ -20,13 +20,13 @@
 }
 
 #whyCodex{
-  margin-left: 80px;
+  /* margin-left: 80px; */
 }
 
-#clickHereLeft{
+/* #clickHereLeft{
   margin-left: 125px;
-}
+} */
 
 #clickHereRight{
-  margin-left: 130px;
+  /* margin-left: 130px; */
 }
