--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link -->
+    <!-- <link rel="stylesheet" href="../public/css/index.css"> -->
     <link rel="stylesheet" href="../public/css/output-styles.css">
     <link rel="stylesheet" href="../public/css/panels.css">
-    <!-- <link rel="stylesheet" href="../public/css/index.css"> -->
     <title>Vinci VR</title>
   </head>
   <body class="text-primary bg-secondary font-serif">
@@ -91,6 +91,34 @@
 
 
      <section class="panel">
+
+       <style media="screen">
+       .card {
+         padding:2rem;
+         width:33%;
+         text-align: center;
+       }
+       .card a {
+         text-align: center;
+       }
+       .card:hover {
+         background-color: #811;
+       }
+       .active {
+         transition-timing-function: ease-in;
+         transition: 0.2s;
+         transform: scale(1.1);
+         background-color: #6C6C6C;
+         filter: drop-shadow(0 0 1.75rem white);
+         z-index: 2;
+         width:33%;
+         text-align: center;
+       }
+       .active img {
+         margin-top: 3rem;
+       }
+
+       </style>
 
        <section class="partnersBlock h-screen w-full mb-64">
 
@@ -316,6 +344,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <script src ="../public/js/about.js"></script>
+    <script src ="../public/js/indexnew.js"></script>
   </body>
 </html>
