--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -37,11 +37,11 @@
              <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
              <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
               <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left">Contact VINCI</h2>
-                  <hr class="mb-8">
-                   <input class="bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
-                   <input class="bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
+                  <hr class="w-4/5 mb-8">
+                   <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
+                   <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
 
-                   <textarea class="border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
+                   <textarea class="w-4/5 opacity-75 border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
                    <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
                    <p class="text-xs text-gray-500 mt-3"></p>
                  </div>
