--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -33,7 +33,7 @@
        </section>
 
        <!-- - - - - - - - - Airforce ---------------->
-       <section class="mb-4 panel background first">
+       <section class="mb-4 panel background second">
           <section class="text-primary body-font">
             <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Air Craft Maintenance</h1>
             <section class="text-gray-700 body-font">
@@ -82,7 +82,7 @@
        </section>
 
        <!-- - - - - - - - - Soldier Training ---------------->
-        <section class="mb-4 panel background third">
+        <section class="mb-4 panel background second">
           <section class="text-primary body-font">
             <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans">Soldier Training</h1>
             <section class="text-gray-700 body-font">
@@ -108,7 +108,7 @@
 
 
       <!-- - - - - - - - - SafetyDNA VR ---------------->
-        <section class="mb-4 panel background fourth">
+        <section class="mb-4 panel background second">
           <section class="text-primary body-font">
             <h1 class="text-primary text-center sm:text-4xl text-3xl mt-10 -mb-10">SafetyDNA VR</h1>
             <section class="text-gray-700 body-font">
