--- a/views/about.hbs
+++ b/views/about.hbs
@@ -85,11 +85,20 @@
                 <div class="flex flex-wrap -m-2">
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.jpg">
+                      <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
-                        <div id="caption"></div>
+                        <div class="bio p-2">
+                           <h2 class="text-left text-lg mt-2 mb-2">Eagle Wu</h2>
+                          <hr>
+                          <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
+                          <h5 class="text-left text-sm">Winner, Money 20/20 Global Hackathon</h5>
+                          <hr>
+                          <p class="text-xs text-left mt-2">
+                              Modern virtual reality headset displays are based on technology developed for smartphones including: gyroscopes and motion sensors for tracking head, body, and hand positions; small HD screens for stereoscopic displays; and small, lightweight and fast computer processors.
+                          </p>
+                        </div>
                       </div>
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">Eagle Wu</h2>
@@ -99,11 +108,20 @@
                   </div>
                   <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                      <img id="myImg" alt="team" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
+                      <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
                       <div id="myModal" class="modal">
                         <span class="close">&times;</span>
                         <img class="modal-content" id="img01">
-                        <div id="caption"></div>
+                        <div class="bio p-2">
+                          <h2 class="text-left text-lg mt-2 mb-2">Tim Clancy</h2>
+                          <hr>
+                          <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
+                          <h5 class="text-left text-sm">Winner, Money 20/20 Global Hackathon</h5>
+                          <hr>
+                          <p class="text-xs text-left mt-2">
+                              Modern virtual reality headset displays are based on technology developed for smartphones including: gyroscopes and motion sensors for tracking head, body, and hand positions; small HD screens for stereoscopic displays; and small, lightweight and fast computer processors.
+                          </p>
+                        </div>
                       </div>
                       <div class="flex-grow">
                         <h2 class="text-primary title-font font-medium">Tim Clancy</h2>
@@ -153,7 +171,7 @@
         </section>
 
         <section class="bg-secondary panel">
-           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
+           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
              <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
              <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
