--- a/views/services.hbs
+++ b/views/services.hbs
@@ -32,7 +32,7 @@
                   <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
                   <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
                   <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
-                  <a href="/blog" class="mr-5 hover:text-gray-900">Blogs</a>
+                  <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
                   <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
                 </nav>
               </div>
@@ -40,25 +40,19 @@
           <hr class="-mt-4">
 
 
-          <section class="w-full p-4 absolute z-1 sm:mt-32 md:-my-84 lg:mt-40">
-            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-6xl md:text-5xl xlg:text-6xl" style="z-index:100;">
-              <hr class="mt-4 w-1/3 mx-auto">
-              Codex
-              <hr class="mt-4 w-1/3 mx-auto">
-            </h1>
-            <p class="text-center text-lg font-bold sm:mx-12 sm:my-32" style="z-index:100;">Access the entire codex suite or pick and choose which toolkits to use</p>
-
-            <p class="down-arrow sm:text-6xl my-32 text-center">⌄</p>
-          </section>
-
-          <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.3); z-index:0;"></div> -->
-        </section>
+            <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">Codex</h1>
+            <div class="tracking-widest text-left p-4 ml-24">
+              <p>Access the entire codex suite or</p>
+              <p>pick and choose which toolkits to use.</p>
+            </div>
+            </section>
       </section>
+
       <section class="panel bg-secondary">
-        <section class="contents text-lg p-12 bg-secondary lg:py-40">
-          <h1 class="text-4xl text-center py-4">Educate Your Workforce Like Never Before</h1>
-          <hr class="m-auto w-3/4 py-4 font-thin">
-          <section class="md:ml-12">
+        <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
+          <h1 class="text-4xl text-left py-4 mx-4">Educate Your Workforce Like Never Before</h1>
+          <hr class=" w-3/4 py-4 font-thin mx-4">
+          <section class="tracking-widest text-left mx-4">
             <p>
               Instructors face limited time, high costs, and potential hazards during high consequence training. These limitations create a gap between the amount of time/repetitions needed for effective knowledge retention and the available opportunities to train.
             </p>
@@ -73,71 +67,82 @@
           </section>
         </section>
       </section>
+
       <section class="panel bg-secondary">
-        <section class="authoring lg:flex m-auto p-12 lg:py-40">
-          <section class="contents">
-            <h1 class="text-3xl font-black uppercase">Codex Authoring</h1>
-            <h4 class="text-xl font-bold sm:my-12">Fully Customize Your Simulations</h4>
+        <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+          <section class=" ">
+            <h1 class="text-3xl font-black uppercase py-4 text-left">Codex Authoring</h1>
+            <hr>
+            <h4 class="text-xl font-semibold my-4">Fully Customize Your Simulations</h4>
             <ul>
-              <li>
+              <li class="tracking-wider leading-loose">
                 Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
               </li>
-              <li>
+              <li class="tracking-wider leading-loose">
                 Create new simulations & training scenarios in a few minutes with codex’s Automated Simulation creator
               </li>
-              <li>
+              <li class="tracking-wider leading-loose">
                 Deploy and store simulations globally on the cloud.
               </li>
             </ul>
           </section>
-          <img src="../public/img/smartmockups_1.png" alt="codex authoring">
+          <img class="p-20 " src="../public/img/codexscreenshot.jpg" alt="codex authoring">
         </section>
       </section>
+
+
       <section class="panel bg-secondary">
-        <section class="simulator lg:flex m-auto p-12 lg:py-40">
-          <section class="contents">
-            <h1 class="text-3xl font-black uppercase">Codex Simulator</h1>
-            <h4 class="text-xl font-bold sm:my-12">Highly Realistic, Interactive VR</h4>
+        <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+          <section class=" ">
+            <h1 class="text-3xl font-black uppercase py-4 text-left">Codex Simulator</h1>
+            <hr>
+            <h4 class="text-xl font-semibold my-4">Highly Realistic, Interactive VR</h4>
             <ul>
-              <li>
-                Train in highly Realistic 3D environments of simulations created in Codex Authoring
+              <li class="tracking-wider leading-loose">
+                Train in highly Realistic 3D environments of simulations created in Codex Authoring.
               </li>
-              <li>
+              <li class="tracking-wider leading-loose">
                 Access multiple training modes automatically created from authoring data, including walkthroughs, performance tests, and scenarios.
               </li>
-              <li>
+              <li class="tracking-wider leading-loose">
                 Utilize pre-existing 3D models or access VINCI’s 3D model library and world class modeling service.
               </li>
             </ul>
           </section>
-          <img src="../public/img/smartmockups_2.png" alt="codex authoring">
+          <img class="p-16 w-11/12 " src="../public/img/SimulatorScreenshot.png" alt="codex authoring">
         </section>
       </section>
-      <section class="panel bg-secondary">
-        <section class="analytics lg:flex m-auto p-12 lg:py-40">
-          <section class="contents">
-            <h1 class="text-3xl font-black uppercase">Codex Analytics</h1>
-            <h4 class="text-xl font-bold sm:my-12">Robust Data Analytics</h4>
-            <ul>
-              <li>
-                Live stream multiple student views as they train in VR
-              </li>
-              <li>
-                Review video playbacks with timestamps of errors.
-              </li>
-              <li>
-                Gain insights into individual or classroom performance with data visualization and trend analysis.
-              </li>
-            </ul>
+
+
+
+        <section class="panel bg-secondary">
+          <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+            <section class=" ">
+              <h1 class="text-3xl font-black uppercase py-4 text-left">Codex Analytics</h1>
+              <hr>
+              <h4 class="text-xl font-semibold my-4">Robust Data Analytics</h4>
+              <ul>
+                <li class="tracking-wider leading-loose">
+                    Live stream multiple student views as they train in VR.
+                </li>
+                <li class="tracking-wider leading-loose">
+                  Review video playbacks with timestamps of errors.
+                </li>
+                <li class="tracking-wider leading-loose">
+                  Gain insights into individual or classroom performance with data visualization and trend analysis.
+                </li>
+              </ul>
+            </section>
+            <img class="p-12 w-4/5 mt-4" src="../public/img/analyticsscreenshot.png" alt="codex analytics">
           </section>
-          <img src="../public/img/smartmockups_3.png" alt="codex authoring">
         </section>
-      </section>
+
+
       <section class="panel bg-secondary">
-        <section class="leverage m-auto p-12 lg:px-12 lg:flex lg:py-48">
-          <section class="contents">
-            <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
-            <h2 class="text-2xl font-bold sm:my-8">Leverage low-cost VR
+        <section class="leverage m-auto p-12 lg:px-12 lg:flex ">
+          <section class=" ">
+            <h1 class="text-3xl font-black uppercase text-center mb-10">Why Codex</h1>
+            <h2 class="text-2xl font-bold ">Leverage low-cost VR
               <hr class="w-3/4 py-4 font-thin">
             </h2>
             <ul>
@@ -156,9 +161,8 @@
         </section>
       </section>
       <section class="panel bg-secondary">
-        <section class="leverage m-auto p-12 lg:flex lg:py-48">
-          <section class="contents">
-            <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
+        <section class="leverage m-auto p-12 lg:flex">
+          <section class=" ">
             <h2 class="text-2xl font-bold sm:my-8">Personalized and Relevant Content
               <hr class="w-3/4 py-4 font-thin">
             </h2>
@@ -175,10 +179,9 @@
         </section>
       </section>
       <section class="panel bg-secondary">
-        <section class="leverage m-auto p-12 lg:flex lg:py-48">
-          <section class="contents">
-            <h1 class="text-3xl font-black uppercase text-center">Why Codex</h1>
-            <h2 class="text-2xl font-bold sm:my-8">Scalable Collaboration
+        <section class="leverage m-auto p-12 lg:flex">
+          <section class=" ">
+            <h2 class="text-2xl font-bold sm:my-8 text-left">Scalable Collaboration
               <hr class="w-3/4 py-4 font-thin">
             </h2>
             <ul>
@@ -193,20 +196,21 @@
           <img class="lg:w-1/2 pl-4" src="https://images.unsplash.com/photo-1538388149542-5e24932d11a8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Group of people using VR sets at same time">
         </section>
       </section>
+
       <section class="panel bg-secondary">
         <section class="contact">
-          <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contactbckgrnd.png'">
+        <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
          <section class="text-gray-700 body-font relative">
            <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
                <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
                  <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left">Contact VINCI</h2>
-                 <hr class="mb-8">
-                 <input class="bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
-                 <input class="bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
+                 <hr class="w-4/5 mb-8">
+                 <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
+                 <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
   ​
-                 <textarea class="border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
+                 <textarea class="w-4/5 opacity-75 border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
                  <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
-                 <p class="text-xs text-gray-500 mt-3">////////////////////////////////////////////////////////////////////</p>
+                 <p class="text-xs text-gray-500 mt-3"></p>
                </div>
   ​
                <div class="lg:w-1/3 md:w-1/2 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32 object-cover"
