Update footers, blog styling, and minor edits

--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -109,7 +109,7 @@
 
 
       <section class="bg-secondary panel">
-         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+         <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
            <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
            <div class="flex flex-col justify-center mt-24">
            <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
@@ -125,28 +125,28 @@
                  <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
                  <nav class="list-none mb-10 -mt-24">
                    <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">ABOUT</a>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
                    </li>
                    <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">SOLUTIONS</a>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
                    </li>
                    <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">PARTNERS</a>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
                    </li>
                    <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CAREERS</a>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
                    </li>
                    <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">BLOGS</a>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
                    </li>
                    <li>
-                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer">CONTACT</a>
+                     <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
                    </li>
                  </nav>
                </div>
              </div>
            </div>
-           <div class="bg-gray-200">
+           <!-- <div class="bg-gray-200">
              <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
                <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
                  <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
@@ -170,7 +170,7 @@
                  </a>
                </span>
              </div>
-           </div>
+           </div> -->
          </footer>
       </section>
     </section>
