--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,12 +6,12 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-	    <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
+	    <!-- <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
 	    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	    <link href="css/theme-navy.css" rel="stylesheet" type="text/css" media="all" />
 	    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
 	    <link href="css/custom2.css" rel="stylesheet" type="text/css" media="all" />
-	    <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
+	    <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'> -->
 
 	    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
 	    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -51,12 +51,12 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-				     
-				     
+
+
 				<!--       <a class="navbar-brand logoText" href="#" style="margin-top: 15px; margin-bottom: 2px; padding-left: 0px; font-size: 1.3em !important">V I N C I</a> -->
 
 					<!-- Just an image -->
-					<nav class="navbar nav-transparent" style="background: none">
+					<!-- <nav class="navbar nav-transparent" style="background: none">
 					  <a class="navbar-brand" href="/">
 					  	{{#if black}}
 					    <img src="img/VINCILogo.png" width="130" alt="">
@@ -65,12 +65,12 @@
 
 					    {{/if}}
 					  </a>
-					</nav>
+					</nav> -->
 
 				    </div>
 
-				    <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="margin-top: 15px; color: #FFF !important;">
-				    
+				    <!-- <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="margin-top: 15px; color: #FFF !important;">
+
 				      <ul class="nav navbar-nav navbar-right" style="color: #FFF !important; padding-right: 15px; margin-top: 25px; font-size: 1.1em;">
 				        <li><a href="/about" class="navLink" style="color: #FFF">ABOUT</a></li>
 				        <li><a href="/services" class="navLink" style="color: #FFF">SOLUTIONS</a></li>
@@ -88,7 +88,7 @@
 	</div>
     {{{body}}}
 
-       <section id="footer">
+       <!-- <section id="footer">
         	<div class="col-md-6">
 	        	<div class="footer-listing">
 	        		<a href="/about"><span class="footer-link">ABOUT</span></a>
@@ -112,7 +112,7 @@
         		<a href="https://www.linkedin.com/company/vincivr/about/?viewAsMember=true"><img src="/img/linkedin-fav.png" class="social-icon"></a>
         	</div>
         	</div>
-        	
-        </section>
+
+        </section> -->
   </body>
 </html>
