--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -1,112 +1,218 @@
-<head>
-	<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="/css/demo.css" />
-	<link rel="stylesheet" type="text/css" href="/css/set1.css" />
-    <link rel="stylesheet" type="text/css" href="/css/blog.css"/>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+	<head>
+		<link rel="stylesheet" href="../public/css/output-styles.css">
+		<link rel="stylesheet" href="../public/css/blogs.css">
+		<link rel="stylesheet" href="../public/css/panels.css">
+	  <!-- <script src="/js/download.js"></script> -->
+		<meta charset="utf-8">
+		<title>VINCI VR</title>
+	</head>
 
-    <style type="text/css">
-        .navLink {
-            color: #000000 !important;
-        }
-    </style>
-    <script src="/js/download.js"></script>
+	<body class="bg-secondary color-primary">
+		<section id="container">
+				<section class="panel">
+					<!--==================
+					 NAV SECTION
+					==================-->
 
-</head>
+					<header class="">
+							<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+								<a href="/" class="flex items-center mb-4 md:mb-0  z-10">
+									<img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+								</a>
+								<nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+									<a href="/about" class="mr-5 hover:text-gray-900 hover:bg-gray-100">About</a>
+									<a href="/services" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Solutions</a>
+									<a href="/partners" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Partners</a>
+									<a href="/careers" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Careers</a>
+									<a href="/blogs" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Blogs</a>
+									<a href="/contact" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Contact</a>
+								</nav>
+							</div>
+					</header>
+					<hr class="-mt-4">
 
-<body id = "newindex">
+				<section class="text-primary bg-secondary overflow-display">
+				  <div class="container px-5 py-24 mx-auto bg-secondary overflow-display">
+						<h1 class="text-4xl font-sans font-bold">VINCI Blogs</h1>
+						<h4 class="text-2xl font-sans text-gray-500 mb-12">Learn more about XR and its applications</h4>
+				    <div class="flex flex-wrap -m-4">
+							<!-- blog1 -->
+				      <div class="p-4 md:w-1/3">
+				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1592478411213-6153e4ebc07d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1300&q=80" alt="blog">
+				          <div class="p-6">
+				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">How VR is Saving Companies Millions</h1>
+										<p class="leading-relaxed mb-3 text-gray-500">How a new age of education technology is having a major impact on training procedures.</p>
+				            <div class="flex items-center flex-wrap ">
+				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-VR-Saving-Millions">Learn More
+				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+				                  <path d="M5 12h14"></path>
+				                  <path d="M12 5l7 7-7 7"></path>
+				                </svg>
+				              </a>
+				            </div>
+										<h6 class="">By Dawson Goepferich</h6>
+										<h6 class="">8min read</h6>
+				          </div>
+				        </div>
+				      </div>
+							<!-- blog2 -->
+							<div class="p-4 md:w-1/3">
+				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/flagged/photo-1556470234-36a5389f905a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="blog">
+				          <div class="p-6">
+				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">How VR is Changing Corporate Training</h1>
+				            <p class="leading-relaxed mb-3 text-gray-500">VR is bringing powerful and progressive changes to how training is being done in the workplace.</p>
+				            <div class="flex items-center flex-wrap ">
+				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-VR-Training-Cases">Learn More
+				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+				                  <path d="M5 12h14"></path>
+				                  <path d="M12 5l7 7-7 7"></path>
+				                </svg>
+				              </a>
+				            </div>
+										<h6 class="">By Ray Lam</h6>
+										<h6 class="">5min read</h6>
+				          </div>
+				        </div>
+				      </div>
+							<!-- blog3 -->
+							<div class="p-4 md:w-1/3">
+				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+				          <img class="lg:h-48 md:h-36 w-full object-cover object-top" src="https://images.unsplash.com/photo-1459550146610-232100af5511?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1094&q=80" alt="blog">
+				          <div class="p-6">
+				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">Types and Applications of Different XR Tech</h1>
+				            <p class="leading-relaxed mb-3 text-gray-500">XR, or extended tech, will transform how humans interact with the physical and digtal world.</p>
+				            <div class="flex items-center flex-wrap ">
+				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/blogs-Applications-XR">Learn More
+				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+				                  <path d="M5 12h14"></path>
+				                  <path d="M12 5l7 7-7 7"></path>
+				                </svg>
+				              </a>
+				            </div>
+										<h6 class="">By Ray Lam</h6>
+										<h6 class="">5min read</h6>
+				          </div>
+				        </div>
+				      </div>
+							<!-- blog4 -->
+							<div class="p-4 md:w-1/3">
+				        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+				          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="../public/img/af-training.png" alt="blog">
+				          <div class="p-6">
+				            <h1 class="font-sans text-lg font-medium text-gray-200 mb-3">Case Study: Aircraft Maintenance VR</h1>
+				            <p class="leading-relaxed mb-3 text-gray-500">How VINCI is redefining training in the United States Air Force.</p>
+				            <div class="flex items-center flex-wrap ">
+				              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/case-studies-USAF">Learn More
+				                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+				                  <path d="M5 12h14"></path>
+				                  <path d="M12 5l7 7-7 7"></path>
+				                </svg>
+				              </a>
+				            </div>
+										<h6 class="">By Eagle Wu</h6>
+										<h6 class="">5min read</h6>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
+				  </div>
+				</section>
+			</section>
 
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-100054313-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
+			<section class="panel">
+				<!--==================
+				 FOOTER SECTION
+				==================-->
 
-	<div class="main-container">
-		<section class="cover fullscreen image-bg parallax slider-10-1485812436050" style="height: auto; background: #ffffff !important; opacity: 1 !important">
-		<div class="row">
-			<center>
-				<div class="blog-links">
-				<div class="container" style="margin-bottom: 7%;">
-				<div class="col-md-12">
-					<center><h1 style="color: #000000 !important; font-size: 3em; margin-top: 0; margin-bottom: 0;">VINCI Blogs</h1>
-						<h4 class="italics">Learn more about XR and its applications</h4></center>
-				</div>
-				<div class="col-md-4">
-					<div class="splashbackground" id="save"></div>
-					<div class="clear"></div>
-					<div class="link">
-						<a href="/blogs-VR-Saving-Millions">
-						<h4>How VR is Saving Companies Millions</h4>
-						<h6 class="italics">How a new age of education technology is having a major impact on training procedures.</h6>
+				<section class="bg-secondary">
+           <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4 lg:mt-64" style="background-image: url('../public/img/contactbckgrnd.png')">
+             <h1 class ="text-primary text-center sm:text-4xl text-3xl">Want to Learn More About VR Training?</h1>
+             <div class="flex flex-col justify-center mt-24">
+             <button class="w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+             <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+             <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+             </div>
+             <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+               <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                 <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+               </div>
+               <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                 <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                   <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                   <nav class="list-none mb-10 -mt-24">
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                     </li>
+                     <li>
+                       <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
+                     </li>
+                   </nav>
+                 </div>
+               </div>
+             </div>
+             <!-- <div class="bg-gray-200">
+               <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+                 <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
+                   <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+                 </p>
+                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                   <a class="text-gray-500">
+                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                       <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                     </svg>
+                   </a>
+                   <a class="ml-3 text-gray-500">
+                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                       <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                     </svg>
+                   </a>
+                   <a class="ml-3 text-gray-500">
+                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                       <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                       <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                     </svg>
+                   </a>
+                 </span>
+               </div>
+             </div> -->
+           </footer>
+        </section>
+			</section>
+		</section>
+	<!--
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-						<h6 class="subtitle_blog_landing">By Dawson Goepferich</h6>
-						<h6 class="subtitle_blog_landing">8min read</h6>
-						</a>
-
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="splashbackground" id="change"></div>
-					<div class="clear"></div>
-					<div class="link">
-						<a href="/blogs-VR-Training-Cases">
-						<h4>How VR is Changing Corporate Training</h4>
-						<h6 class="italics">VR is bringing powerful and progressive changes to how training is being done in the workplace.</h6>
-
-						<h6 class="subtitle_blog_landing">By Ray Lam</h6>
-						<h6 class="subtitle_blog_landing">5min read</h6>
-						</a>
-
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="splashbackground" id="types"></div>
-					<div class="clear"></div>
-					<div class="link">
-						<a href="/blogs-Applications-XR">
-						<h4>Types and Applications of Different XR Tech</h4>
-						<h6 class="italics">XR, or extended tech, will transform how humans interact with the physical and digtal world.</h6>
-
-						<h6 class="subtitle_blog_landing">By Ray Lam</h6>
-						<h6 class="subtitle_blog_landing">5min read</h6>
-						</a>
-
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="splashbackground" id="case"></div>
-					<div class="clear"></div>
-					<div class="link">
-						<a href="/case-studies-USAF">
-						<h4>Case Study: Aircraft Maintenance VR</h4>
-						<h6 class="italics">How VINCI is redefining training in the United States Air Force.</h6>
-
-						<h6 class="subtitle_blog_landing">By Eagle Wu</h6>
-						<h6 class="subtitle_blog_landing">5min read</h6>
-						</a>
-
-					</div>
-				</div>
-
-			</div>
-				</div>
-			
-		</center>
-
-		</div>
-	</section>
-	</div>
+		  ga('create', 'UA-100054313-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
+	 -->
 
 
-</body>
+
+		<!-- SCRIPTS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
+		<script src ="../public/js/blogs.js"></script>
+	</body>
+</html>
