--- a/views/services.hbs
+++ b/views/services.hbs
@@ -28,7 +28,7 @@
                   <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
                   <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
                   <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
-                  <a href="/blog" class="mr-5 hover:text-gray-900">Blogs</a>
+                  <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
                   <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
                 </nav>
               </div>
